- Bug Fix: avoid conflicts with other plugins using GAPI library - Security: escaping output of API Key, Client ID and Client Secret - Enhancement: GAPI library update - Enhancement: main chart optimization - Enhancement: rename top buttons and View Duration to properly fit in small widgets
git-svn-id: https://plugins.svn.wordpress.org/youtube-analytics/trunk@1059107 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/yt_dash.css
+++ b/yt_dash.css
@@ -2,7 +2,7 @@
 	font-family:Arial, Verdana; 
 	font-weight:bold; 
 	font-size:10pt;
-	width: 90%;
+	width: 98%;
 }
 .ytbutton{
 	-moz-box-shadow:inset 0px 1px 0px 0px #E1312B;
@@ -10,7 +10,7 @@
 	box-shadow:inset 0px 1px 0px 0px #E1312B;
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #C7312B), color-stop(1, #F0312B) );
 	background:-moz-linear-gradient( center top, #C7312B 5%, #F0312B 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=\'#C7312B\', endColorstr=\'#F0312B\');
+	/*filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=\'#C7312B\', endColorstr=\'#F0312B\');*/
 	background-color:#C7312B;
 	-moz-border-radius:6px;
 	-webkit-border-radius:6px;
@@ -28,7 +28,7 @@
 .ytbutton:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #F0312B), color-stop(1, #C7312B) );
 	background:-moz-linear-gradient( center top, #F0312B 5%, #C7312B 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=\'#F0312B\', endColorstr=\'#C7312B\');
+	/*filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=\'#F0312B\', endColorstr=\'#C7312B\');*/
 	background-color:#F0312B;
 }
 .ytbutton:active {
@@ -49,7 +49,7 @@ a.yttable:hover {
 }
 
 #yt_dash_statsdata{
-	width: 90%;
+	width: 98%;
 	display: block;
 	margin: 0 auto;
 }
@@ -60,7 +60,7 @@ table.yttable {
 	box-shadow:inset 0px 1px 0px 0px #E1312B;
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #C7312B), color-stop(1, #F0312B) );
 	background:-moz-linear-gradient( center top, #C7312B 5%, #F0312B 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=\'#C7312B\', endColorstr=\'#F0312B\');
+	/*filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=\'#C7312B\', endColorstr=\'#F0312B\');*/
 	background-color:#C7312B;
 	-moz-border-radius:6px;
 	-webkit-border-radius:6px;
@@ -76,14 +76,13 @@ table.yttable {
 	text-shadow:1px 1px 0px #F40000;
 }
 
-.note{
-	border:2px solid #a1a1a1;
-	padding:10px 20px; 
-	background:white;
-	border-radius:25px;
-	width:25%;
+.deconf-title {
+	float:left;
+	margin-right: 10px;
+	margin-top: 2px;
+	clear:left;
 }
 
-.note li{
-	line-height:1.5em;
+.deconf-desc {
+	font-size: 1em;
 }
